--- a/index.html
+++ b/index.html
@@ -10,6 +10,17 @@
 </head>
 
 <body>
+    <!-- card -->
+    <header>
+        <!-- title -->
+    </header>
+    <main>
+        <!-- paragraph -->
+
+        <div>
+            <!-- row + cards -->
+        </div>
+    </main>
 
 </body>
 
