--- a/index.html
+++ b/index.html
@@ -6,21 +6,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Anuphan&family=Fredoka:wght@300;400;500;600;700&display=swap"
+        rel="stylesheet">
     <title>Meet our Team</title>
 </head>
 
 <body>
     <!-- card -->
-    <header>
-        <!-- title -->
-    </header>
-    <main>
-        <!-- paragraph -->
+    <div class="container">
 
-        <div>
-            <!-- row + cards -->
-        </div>
-    </main>
+        <header>
+            <!-- title -->
+            <h1>Meet our Team</h1>
+        </header>
+        <main>
+            <!-- paragraph -->
+
+            <div>
+                <!-- row + cards -->
+            </div>
+        </main>
+    </div>
 
 </body>
 
