--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
         </header>
         <main>
             <!-- paragraph -->
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni aliquam laboriosam cupiditate quod
+                maiores delectus nihil, repellendus dolorem veniam sed dolores quibusdam ut minus voluptatum corporis
+                tenetur modi obcaecati quo.</p>
 
             <div>
                 <!-- row + cards -->
