add first card_team

--- a/index.html
+++ b/index.html
@@ -27,10 +27,18 @@
                 maiores delectus nihil, repellendus dolorem veniam sed dolores quibusdam ut minus voluptatum corporis
                 tenetur modi obcaecati quo.</p>
 
-            <div>
-                <!-- row + cards -->
+            <!-- row + cards -->
+            <div class="row clearfix">
+                <div class="card_team clearfix">
+                    <img src="img/male1.png" alt="Marco Bianchi" class="pic_team">
+                    <h4>MARCO BIANCHI</h4>
+                    <p class="role">Desiner</p>
+                    <a href="#">marcobianchi@team.com</a>
+                </div>
+
             </div>
-        </main>
+    </div>
+    </main>
     </div>
 
 </body>
