added first row with bug

--- a/index.html
+++ b/index.html
@@ -36,6 +36,19 @@
                     <a href="#">marcobianchi@team.com</a>
                 </div>
 
+                <div class="card_team clearfix">
+                    <img src="img/female1.png" alt="Laura Rossi" class="pic_team">
+                    <h4>LAURA ROSSI</h4>
+                    <p class="role">Front-end developer</p>
+                    <a href="#">laurarossi@team.com</a>
+                </div>
+
+                <div class="card_team clearfix">
+                    <img src="img/male2.png" alt="Giorgio Verdi" class="pic_team">
+                    <h4>GIORGIO VERDI</h4>
+                    <p class="role">Back-end developer</p>
+                    <a href="#">giorgioverdi@team.com</a>
+                </div>
             </div>
     </div>
     </main>
