--- a/index.html
+++ b/index.html
@@ -31,23 +31,29 @@
             <div class="row clearfix">
                 <div class="card_team clearfix">
                     <img src="img/male1.png" alt="Marco Bianchi" class="pic_team">
-                    <h4>MARCO BIANCHI</h4>
-                    <p class="role">Desiner</p>
-                    <a href="#">marcobianchi@team.com</a>
+                    <div class="info_team">
+                        <h4>MARCO BIANCHI</h4>
+                        <p class="role">Desiner</p>
+                        <a href="#">marcobianchi@team.com</a>
+                    </div>
                 </div>
 
                 <div class="card_team clearfix">
                     <img src="img/female1.png" alt="Laura Rossi" class="pic_team">
-                    <h4>LAURA ROSSI</h4>
-                    <p class="role">Front-end developer</p>
-                    <a href="#">laurarossi@team.com</a>
+                    <div class="info_team">
+                        <h4>LAURA ROSSI</h4>
+                        <p class="role">Front-end developer</p>
+                        <a href="#">laurarossi@team.com</a>
+                    </div>
                 </div>
 
                 <div class="card_team clearfix">
                     <img src="img/male2.png" alt="Giorgio Verdi" class="pic_team">
-                    <h4>GIORGIO VERDI</h4>
-                    <p class="role">Back-end developer</p>
-                    <a href="#">giorgioverdi@team.com</a>
+                    <div class="info_team">
+                        <h4>GIORGIO VERDI</h4>
+                        <p class="role">Back-end developer</p>
+                        <a href="#">giorgioverdi@team.com</a>
+                    </div>
                 </div>
             </div>
     </div>
