added second row

--- a/index.html
+++ b/index.html
@@ -56,6 +56,37 @@
                     </div>
                 </div>
             </div>
+            <!--seconda row -->
+            <div class="row clearfix">
+                <div class="card_team clearfix">
+                    <img src="img/female2.png" alt="Marta Ipsum" class="pic_team">
+                    <div class="info_team">
+                        <h4>MARTA IPSUM</h4>
+                        <p class="role">SEO Specialist</p>
+                        <a href="#">martaipsum@team.com</a>
+                    </div>
+                </div>
+
+                <div class="card_team clearfix">
+                    <img src="img/male3.png" alt="Roberto Lorem" class="pic_team">
+                    <div class="info_team">
+                        <h4>ROBERTO LOREM</h4>
+                        <p class="role">Project Manager</p>
+                        <a href="#">robertolorem@team.com</a>
+                    </div>
+                </div>
+
+                <div class="card_team clearfix">
+                    <img src="img/female3.png" alt="Daniela Amet" class="pic_team">
+                    <div class="info_team">
+                        <h4>DANIELA AMET</h4>
+                        <p class="role">Analyst</p>
+                        <a href="#">robertaamet@team.com</a>
+                    </div>
+                </div>
+            </div>
+
+
     </div>
     </main>
     </div>
