--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
         </header>
         <main>
             <!-- paragraph -->
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni aliquam laboriosam cupiditate quod
+            <p class="main_description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni aliquam
+                laboriosam cupiditate quod
                 maiores delectus nihil, repellendus dolorem veniam sed dolores quibusdam ut minus voluptatum corporis
                 tenetur modi obcaecati quo.</p>
 
