add effect and comments

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <img src="img/male1.png" alt="Marco Bianchi" class="pic_team">
                     <div class="info_team">
                         <h4>MARCO BIANCHI</h4>
-                        <p class="role">Desiner</p>
+                        <p class="role">Designer</p>
                         <a href="#">marcobianchi@team.com</a>
                     </div>
                 </div>
