fix a and width .card_team

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <div class="info_team">
                         <h4>MARCO BIANCHI</h4>
                         <p class="role">Designer</p>
-                        <a href="#">marcobianchi@team.com</a>
+                        <a href="mailto:marcobianchi@team.com">marcobianchi@team.com</a>
                     </div>
                 </div>
 
@@ -44,7 +44,7 @@
                     <div class="info_team">
                         <h4>LAURA ROSSI</h4>
                         <p class="role">Front-end developer</p>
-                        <a href="#">laurarossi@team.com</a>
+                        <a href="mailto:laurarossi@team.com">laurarossi@team.com</a>
                     </div>
                 </div>
 
@@ -53,7 +53,7 @@
                     <div class="info_team">
                         <h4>GIORGIO VERDI</h4>
                         <p class="role">Back-end developer</p>
-                        <a href="#">giorgioverdi@team.com</a>
+                        <a href="mail.to:giorgioverdi@team.com">giorgioverdi@team.com</a>
                     </div>
                 </div>
             </div>
@@ -64,7 +64,7 @@
                     <div class="info_team">
                         <h4>MARTA IPSUM</h4>
                         <p class="role">SEO Specialist</p>
-                        <a href="#">martaipsum@team.com</a>
+                        <a href="mailto:martaipsum@team.com">martaipsum@team.com</a>
                     </div>
                 </div>
 
@@ -73,7 +73,7 @@
                     <div class="info_team">
                         <h4>ROBERTO LOREM</h4>
                         <p class="role">Project Manager</p>
-                        <a href="#">robertolorem@team.com</a>
+                        <a href="mailto:robertolorem@team.com">robertolorem@team.com</a>
                     </div>
                 </div>
 
@@ -82,7 +82,7 @@
                     <div class="info_team">
                         <h4>DANIELA AMET</h4>
                         <p class="role">Analyst</p>
-                        <a href="#">robertaamet@team.com</a>
+                        <a href="mailto:robertaamet@team.com">robertaamet@team.com</a>
                     </div>
                 </div>
             </div>
